RESOLVED FIXED321122
REGRESSION(313859@main): SVGForeignObjectElement dynamic x/y take no effect
https://bugs.webkit.org/show_bug.cgi?id=321122
Summary REGRESSION(313859@main): SVGForeignObjectElement dynamic x/y take no effect
Nikolas Zimmermann
Reported 2026-08-05 13:37:59 PDT
LayoutTests/svg/dynamic-updates/SVGForeignObjectElement-svgdom-x-prop.html + -y-prop.html are broken - the foreignObject no longer reacts on dynamic x/y updates.
Attachments
Nikolas Zimmermann
Comment 1 2026-08-05 14:51:48 PDT
EWS
Comment 2 2026-08-05 16:59:03 PDT
Committed 318669@main (27a59f0ec20e): <https://commits.webkit.org/318669@main> Reviewed commits have been landed. Closing PR #70990 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-08-05 17:00:17 PDT
Note You need to log in before you can comment on or make changes to this bug.