Source/WebCore/svg/SVGForeignObjectElement.cpp
@@ -89,13 +89,9 @@ void SVGForeignObjectElement::svgAttributeChanged(const QualifiedName& attrName)
 {
     if (PropertyRegistry::isKnownAttribute(attrName)) {
         InstanceInvalidationGuard guard(*this);
-        if (attrName == SVGNames::widthAttr || attrName == SVGNames::heightAttr)
-            setPresentationalHintStyleIsDirty();
-        else {
-            ASSERT(attrName == SVGNames::xAttr || attrName == SVGNames::yAttr);
+        setPresentationalHintStyleIsDirty();
+        if (attrName == SVGNames::xAttr || attrName == SVGNames::yAttr)
             updateRelativeLengthsInformation();
-            updateSVGRendererForElementChange();
-        }
         return;
     }
 
